--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gulp-page",
-  "version": "0.1.0",
+  "name": "gulp-page-by-ljay",
+  "version": "0.2.0",
   "description": "Awesome node module",
   "keywords": [
     "gulp-page",
