feat: update name

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.2.0",
   "description": "Awesome node module",
   "keywords": [
-    "gulp-page",
-    "zce"
+    "gulp-page-by-ljay",
+    "ljay"
   ],
   "homepage": "https://github.com/ljay92/gulp-page#readme",
   "bugs": {
